# deer-med

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/CMeEE-V2/bio/: label2id.json
data/CMeEE-V2/bio/train_sample/: ration-0.05_seed-42_bio_token.json  ration-0.1_seed-42_bio_token.json
data/CMeEE-V2/type_definitions/: definitions.yaml  definitions_simple.yaml
data/CMeEE-V2/type_mapping/: type_id.json  type_mapping.json  type_zh_to_en.json
data/NCBI-disease/: dev.json  test.json  train.json
data/genia_term_corpus/: label2id.json  type_mapping.json
data/genia_term_corpus/bio/: dev_bio.json
data/genia_term_corpus/cmeee-style/: dev.json  readme.md  test.json
data/genia_term_corpus/cmeee-style/train_sample_stratified/seed-13/: 100.json  100_metadata.json  200.json  200_metadata.json  500.json  500_metadata.json  README.md
data/genia_term_corpus/cmeee-style/train_sample_stratified/seed-21/: 100.json  100_metadata.json  200.json  200_metadata.json  500.json  500_metadata.json  README.md
scripts/: run_deer.py  run_pipeline.py  selfcheck_deer.py
src/deer/: __init__.py  orchestrator.py
src/deer/align/: __init__.py  aligner.py
src/deer/data/: __init__.py  datasets.py  loaders.py  ncbi.py
src/deer/eval/: __init__.py  metrics.py
src/deer/generate/: __init__.py  generator.py
src/deer/llm/: __init__.py  client.py  embedder.py
src/deer/reflect/: __init__.py
src/deer/reflect/flat/: __init__.py  passes.py  triggers.py
src/deer/retrieval/: __init__.py  label_guided.py
src/deer/stats/: __init__.py  deer_token_stats.py
(+9 files in other folders)
